# UAP

./: pyproject.toml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
src/uap/: app.py
